registry-vocabulary sync for facets and dataset category field